<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>grupo5</groupId>
    <artifactId>donatrack</artifactId>
    <version>1.0</version>
    <packaging>pom</packaging>

    <name>donatrack</name>
    <url>https://github.com/tsorren/DonaTrack-TP-DDS</url>
    <modules>
        <module>common-lib</module>
        <module>donaciones-service</module>
        <module>notificaciones-service</module>
        <module>incentivos-service</module>
        <module>logistica-service</module>
        <module>integration-tests</module>
    </modules>

    <properties>
        <maven.compiler.release>21</maven.compiler.release>
        <java.version>21</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <spring.boot.maven.plugin.version>4.0.7</spring.boot.maven.plugin.version>
        <spring.boot.dependencies.version>4.0.7</spring.boot.dependencies.version>
        <spring.cloud-version>2025.1.1</spring.cloud-version>
        <lombok.version>1.18.46</lombok.version>

        <springdoc-openapi.version>2.8.5</springdoc-openapi.version>

        <spotless.version>3.6.0</spotless.version>
        <jacoco.version>0.8.14</jacoco.version>
        <plantuml-generator.version>3.0.1</plantuml-generator.version>
        <sonar.version>5.7.0.6970</sonar.version>
        <testcontainers.version>1.20.4</testcontainers.version>
        <logstash-logback-encoder.version>7.4</logstash-logback-encoder.version>
        <archunit.version>1.3.0</archunit.version>
        <pitest.version>1.16.1</pitest.version>
        <pitest-junit5-plugin.version>1.2.3</pitest-junit5-plugin.version>
        <argLine></argLine>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring.boot.dependencies.version}</version>
                <scope>import</scope>
                <type>pom</type>
            </dependency>
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring.cloud-version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.testcontainers</groupId>
                <artifactId>testcontainers-bom</artifactId>
                <version>${testcontainers.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>net.logstash.logback</groupId>
                <artifactId>logstash-logback-encoder</artifactId>
                <version>${logstash-logback-encoder.version}</version>
            </dependency>
            <dependency>
                <groupId>com.tngtech.archunit</groupId>
                <artifactId>archunit-junit5</artifactId>
                <version>${archunit.version}</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.tngtech.archunit</groupId>
            <artifactId>archunit-junit5</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <configuration>
                        <failIfNoSpecifiedTests>false</failIfNoSpecifiedTests>
                        <argLine>-XX:+TieredCompilation -XX:TieredStopAtLevel=1 -XX:+UseSerialGC @{argLine}</argLine>
                        <properties>
                            <configurationParameters>
                                junit.jupiter.execution.parallel.enabled = true
                                junit.jupiter.execution.parallel.mode.default = same_thread
                                junit.jupiter.execution.parallel.mode.classes.default = concurrent
                            </configurationParameters>
                        </properties>
                        <excludes>
                            <exclude>**/DonacionesServiceApplicationTest.java</exclude>
                            <exclude>**/IncentivosServiceApplicationTest.java</exclude>
                            <exclude>**/PlanificacionManualFlowIntegrationTest.java</exclude>
                            <exclude>**/RepositoriosJpaTest.java</exclude>
                        </excludes>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <version>${spring.boot.maven.plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.sonarsource.scanner.maven</groupId>
                    <artifactId>sonar-maven-plugin</artifactId>
                    <version>${sonar.version}</version>
                </plugin>
                <plugin>
                    <groupId>de.elnarion.maven</groupId>
                    <artifactId>plantuml-generator-maven-plugin</artifactId>
                    <version>${plantuml-generator.version}</version>
                    <dependencies>
                        <dependency>
                            <groupId>org.springframework.boot</groupId>
                            <artifactId>spring-boot-starter-data-jpa</artifactId>
                            <version>${spring.boot.dependencies.version}</version>
                        </dependency>
                    </dependencies>
                    <executions>
                        <execution>
                            <id>generate-plantuml</id>
                            <phase>none</phase>
                            <goals>
                                <goal>generate</goal>
                            </goals>
                            <configuration>
                                <outputDirectory>${project.build.directory}</outputDirectory>
                                <outputFilename>modelo_tecnico.puml</outputFilename>
                                <scanPackages>
                                    <scanPackage>grupo5</scanPackage>
                                </scanPackages>
                                <hideFields>false</hideFields>
                                <hideMethods>false</hideMethods>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <release>${java.version}</release>
                    <parameters>true</parameters>
                    <compilerArgs>
                        <arg>-proc:full</arg>
                    </compilerArgs>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.version}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>

            <plugin>
                <groupId>com.diffplug.spotless</groupId>
                <artifactId>spotless-maven-plugin</artifactId>
                <version>${spotless.version}</version>
                <configuration>
                    <java>
                        <toggleOffOn />
                        <googleJavaFormat>
                            <version>1.22.0</version>
                            <style>GOOGLE</style>
                        </googleJavaFormat>
                    </java>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>check</goal>
                        </goals>
                        <phase>compile</phase>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>${jacoco.version}</version>
                <executions>
                    <execution>
                        <id>prepare-agent</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>report</id>
                        <phase>test</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>mutation-test</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.pitest</groupId>
                        <artifactId>pitest-maven</artifactId>
                        <version>${pitest.version}</version>
                        <dependencies>
                            <dependency>
                                <groupId>org.pitest</groupId>
                                <artifactId>pitest-junit5-plugin</artifactId>
                                <version>${pitest-junit5-plugin.version}</version>
                            </dependency>
                        </dependencies>
                        <configuration>
                            <targetClasses>
                                <param>grupo5.donaciones.models.algoritmos.AlgoritmoCompatibilidadSemantica*</param>
                            </targetClasses>
                            <targetTests>
                                <param>grupo5.donaciones.models.algoritmos.AlgoritmoCompatibilidadSemanticaTest</param>
                            </targetTests>
                            <mutationThreshold>75</mutationThreshold>
                            <failWhenNoMutations>false</failWhenNoMutations>
                            <useClasspathFile>true</useClasspathFile>
                            <verbose>true</verbose>
                            <jvmArgs>
                                <jvmArg>-Xmx1024m</jvmArg>
                            </jvmArgs>
                        </configuration>
                        <executions>
                            <execution>
                                <id>pitest-mutation-coverage</id>
                                <phase>test</phase>
                                <goals>
                                    <goal>mutationCoverage</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>puml</id>
            <activation>
                <property>
                    <name>plantuml-generator.skip</name>
                    <value>false</value>
                </property>
            </activation>
            <build>
                <pluginManagement>
                    <plugins>
                        <plugin>
                            <groupId>de.elnarion.maven</groupId>
                            <artifactId>plantuml-generator-maven-plugin</artifactId>
                            <executions>
                                <execution>
                                    <id>generate-plantuml</id>
                                    <phase>test</phase>
                                </execution>
                            </executions>
                        </plugin>
                    </plugins>
                </pluginManagement>
            </build>
        </profile>
    </profiles>
</project>